<!-- <?xml version="1.0"?> -->
<package>
  <name>gazebo_panda</name>
  <version>0.0.1</version>
  <description>The gazebo_panda package for simulating the Panda 
    Robot from Franka Emika.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>TODO</license>
  <!-- <url type="website"></url> -->
  <url type="repository">
    https://github.com/JustaGist/gazebo_panda
  </url>

  <author email="sxs1412@bham.ac.uk"> Saif Sidhik </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>libgazebo9-dev</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>franka_panda_description</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
</package>
